# coding_practise

./: .gitignore  README.md  algorithm_notes.md  cpp_compilation_steps.md  javascript_notes.md  prime_generator.cpp  tweets_count.cpp
algo_design_manual_skiena/: counting_carry_in_addition.cpp  light_more_light.cpp  multiplication_game.cpp
algo_design_manual_skiena/chapter_3_exercises/: bin_packing_problem_worst_heuristic.cpp  direction_reversal_linked_list.cpp  linked_list_reversal.cpp
basic_concepts/: README.md
cpp_sources/algo_design_manual_skiena/: string_matching_rabin_karp.cpp
cpp_sources/binary_search_tree/: driver.cpp  makefile  node.cpp  node.hpp  tree  tree.cpp  tree.hpp
cpp_sources/graphs_implementation/source_with_oo/: CMakeLists.txt  create_directory_structure.sh  edge_node_test  makefile
cpp_sources/graphs_implementation/source_with_oo/breadth_first_search/: driver.cpp  graph.cpp  graph.hpp  graph_read  makefile
cpp_sources/graphs_implementation/source_with_oo/depth_first_search/: dfs  driver.cpp  graph.cpp  graph.hpp  makefile
cpp_sources/graphs_implementation/source_with_oo/finding_cycles_using_depth_first_search/: cycle  driver.cpp  graph.cpp  graph.hpp  makefile
cpp_sources/graphs_implementation/source_with_oo/reading_a_graph/: driver_file.cpp  edge_node.cpp  edge_node.hpp  graph.cpp  graph.hpp  graph_read  makefile
cpp_sources/graphs_implementation/source_with_oo/reading_a_graph/test/: tests_edgenode.cpp  tests_graph.cpp
cpp_sources/random_things/: gold_coin.cpp  marbles.cpp
graphs_implementation/: a.out
(+22 files in other folders)
